# TCC

backup códigos/19-06 instalei pytorch + carreguei modelo metano/: CMakeLists.txt  CarregandoModelo.cpp
backup códigos/22-06 rodei código do lendro + carreguei modelo metano nele/: CMakeLists.txt  Heat-Int-IA.cpp
backup códigos/23-06 implementando cálculo de Tout/: CalculandoTout.cpp
backup códigos/28-06 finalizado cálculo Tout/: CalculandoTout.cpp
dados_csv/: dados_metano.csv  dados_metano_PengR.csv
dados_csv/1-caso-3-correntes/: isopentane.csv  n-butane.csv  n-pentane.csv
modelos/: EnthVersusTemp.pth  TempVersusEnth.pth  teste.pt
modelos/caso-1-3-correntes/: isopentane_EnthVersusTemp.pth  isopentane_HxT.pth  isopentane_TempVersusEnth.pth  isopentane_TxH.pth  n-butane_EnthVersusTemp.pth  n-butane_HxT.pth  n-butane_TempVersusEnth.pth  n-butane_TxH.pth  n-pentane_EnthVersusTemp.pth  n-pentane_HxT.pth  n-pentane_TempVersusEnth.pth  n-pentane_TxH.pth
notebooks/: exemplo_metano.ipynb  exemplo_metano_PengR.ipynb
simulacoes/1-caso-3-correntes/: isopentane.apwz  n-butane.apwz  n-pentane.apwz
